<resources>
    <string name="app_name">medicine reminder</string>
    <string name="welcome_to_doctor_prescription">Welcome to Doctor Prescription</string>
    <string name="have_medicine_on_time_stay_healthy">Have medicine on time, Stay healthy</string>
    <string name="start_today">Start Today!!!</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="existing_user_log_in">Existing User? LOG IN</string>
    <string name="name">Name</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_enter_your_phone_number">Please enter your phone number</string>
    <string name="email_id">Email ID</string>
    <string name="please_enter_your_email_id">Please enter your email id</string>

    <string name="please_enter_your_password">Please enter your password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="sign_up">SIGN UP</string>

    <string name="please_enter_email">Please enter email</string>
    <string name="password">Password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome">Welcome</string>
    <string name="Name">Name</string>
    <string name="your_documents">Your Documents</string>
    <string name="your_doctors">Your Doctors</string>
    <string name="conditions_ailments">Conditions Ailments</string>
    <string name="medical_center">Medical Center</string>
    <string name="title_activity_reminder2">activity_reminder2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="set_time">Set Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="dosage">Dosage</string>
    <string name="medicine">Medicine</string>



    <string name="you_can_see_your_patients_here">You can see your patients here</string>
    <string name="list_of_patients">List of patients</string>
    <string name="you_can_prescribe_medicine">You can prescribe medicine</string>
    <string name="prescribe">Prescribe</string>
    <string name="appointments">Appointments</string>
    <string name="your_appointments">Your Appointments</string>
    <string name="contact_support">Contact Support</string>
    <string name="support">SUPPORT</string>
</resources>